[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.14.0", default-features = false, features =["std"]}
digest = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }
hex = { version = "0.4", default-features = false }